[gd_scene load_steps=9 format=3 uid="uid://80qhg4to1d0c"]

[ext_resource type="Theme" uid="uid://r7pqoqyivvll" path="res://Main/Assets/Themes/main_theme.tres" id="1_28tk1"]
[ext_resource type="Script" path="res://Main/DrawingGame/DraggableWindow/draggable_window.gd" id="2_xutke"]
[ext_resource type="Texture2D" uid="uid://b84pqwkqqxn3s" path="res://Main/Database/db_content/RoundTopicImages/Lady_with_an_Ermine.jpg" id="3_2ap2w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l2fae"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onhj6"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtbqs"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7o7e"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ct16"]
bg_color = Color(0, 0, 0, 0)

[node name="DraggableWindow" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_28tk1")
theme_override_styles/focus = SubResource("StyleBoxFlat_l2fae")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_onhj6")
theme_override_styles/hover = SubResource("StyleBoxFlat_dtbqs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d7o7e")
theme_override_styles/normal = SubResource("StyleBoxFlat_3ct16")
script = ExtResource("2_xutke")
image = ExtResource("3_2ap2w")

[node name="PanelsVBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -79.0
offset_right = 78.0
grow_vertical = 0

[node name="ItemPanel" type="PanelContainer" parent="PanelsVBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ImageItem" type="TextureRect" parent="PanelsVBoxContainer/ItemPanel"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 2

[node name="TopPanel" type="PanelContainer" parent="PanelsVBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.69, 0.69, 0.69, 1)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme = ExtResource("1_28tk1")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelsVBoxContainer/TopPanel"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="MaximizeButton" type="Button" parent="PanelsVBoxContainer/TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "ðŸ—–"

[node name="MinimizeButton" type="Button" parent="PanelsVBoxContainer/TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "ðŸ—•"

[node name="DraggableWindowScene" type="Node2D" parent="."]

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="pressed" from="PanelsVBoxContainer/TopPanel/HBoxContainer/MaximizeButton" to="." method="_on_maximize_button_pressed"]
[connection signal="pressed" from="PanelsVBoxContainer/TopPanel/HBoxContainer/MinimizeButton" to="." method="_on_minimize_button_pressed"]
